--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.2",
     "styled-components": "^5.3.5",
+    "styled-reset": "^4.3.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
