--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,10 +23,12 @@
   "rules": {
     "prettier/prettier": "warn",
     "react/no-unused-prop-types": "off",
+    "react/prop-types":"off",
     "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-unsafe-return": "off",
     "@typescript-eslint/no-unsafe-member-access": "off"
+
   },
   "ignorePatterns": ["reportWebVitals.ts"]
 }
