--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,5 +30,5 @@
     "@typescript-eslint/no-unsafe-member-access": "off"
 
   },
-  "ignorePatterns": ["reportWebVitals.ts"]
+  "ignorePatterns": ["reportWebVitals.ts","jest.config.js"]
 }
