--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,16 +19,21 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["prettier"],
+  "plugins": [
+    "prettier"
+  ],
   "rules": {
     "prettier/prettier": "warn",
     "react/no-unused-prop-types": "off",
-    "react/prop-types":"off",
+    "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-unsafe-return": "off",
-    "@typescript-eslint/no-unsafe-member-access": "off"
-
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-floating-promises": "off"
   },
-  "ignorePatterns": ["reportWebVitals.ts","jest.config.js"]
+  "ignorePatterns": [
+    "reportWebVitals.ts",
+    "jest.config.js"
+  ]
 }
