--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "https://openapi.naver.com",
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -15,11 +16,15 @@
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.3.2",
     "recoil": "^0.7.2",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.3.4",
+    "sweetalert": "^2.1.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -39,7 +44,9 @@
     "prettier": "^2.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_STATE_MANANGEMENT=recoil react-scripts start",
+    "start:recoil": "REACT_APP_STATE_MANANGEMENT=recoil react-scripts start",
+    "start:redux": "REACT_APP_STATE_MANANGEMENT=redux react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
