--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,10 +19,9 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "prettier"
-  ],
+  "plugins": ["prettier"],
   "rules": {
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
     "prettier/prettier": "warn",
     "react/no-unused-prop-types": "off",
     "react/prop-types": "off",
@@ -30,10 +29,8 @@
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-unsafe-return": "off",
     "@typescript-eslint/no-unsafe-member-access": "off",
-    "@typescript-eslint/no-floating-promises": "off"
+    "@typescript-eslint/no-floating-promises": "off",
+    "react/react-in-jsx-scope": "off"
   },
-  "ignorePatterns": [
-    "reportWebVitals.ts",
-    "jest.config.js"
-  ]
+  "ignorePatterns": ["reportWebVitals.ts", "jest.config.js"]
 }
