--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
+    "husky-init": "^8.0.0",
+    "lint-staged": "^12.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-query": "^3.39.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -25,6 +28,7 @@
     "styled-components": "^5.3.5",
     "styled-reset": "^4.3.4",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.14",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -41,7 +45,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "husky": "^8.0.0"
   },
   "scripts": {
     "start": "REACT_APP_STATE_MANANGEMENT=recoil react-scripts start",
@@ -49,14 +54,19 @@
     "start:redux": "REACT_APP_STATE_MANANGEMENT=redux react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --fix",
+    "prettier": "prettier --write .",
+    "lint-staged": "lint-staged",
+    "prepare": "husky install"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix --max-warnings=0",
+      "prettier --write"
     ]
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
