--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
     "@typescript-eslint/no-unsafe-return": "off",
     "@typescript-eslint/no-unsafe-member-access": "off",
     "@typescript-eslint/no-floating-promises": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "import/prefer-default-export":"off"
   },
   "ignorePatterns": ["reportWebVitals.ts", "jest.config.js"]
 }
