feat: 다읽은 책 목록 표시 기능 추가

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
       }
     ],
     "prettier/prettier": "warn",
+    "react/no-array-index-key": "off",
     "react/jsx-props-no-spreading": "off",
     "react/react-in-jsx-scope": "off",
     "import/prefer-default-export": "off",
@@ -54,5 +55,5 @@
       }
     }
   },
-  "ignorePatterns": ["reportWebVitals.ts", "jest.config.js"]
+  "ignorePatterns": ["reportWebVitals.ts", "jest.config.js","server/*"]
 }
