--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "prettier": "^2.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
