--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@ node_modules/
 .DS_Store
 .env
 .env.local
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 
 npm-debug.log*
